fix(list-item, stack): stretch action-menu when placed inside a list-item or stack.

--- a/packages/calcite-components/src/components/list-item/list-item.scss
+++ b/packages/calcite-components/src/components/list-item/list-item.scss
@@ -136,7 +136,8 @@ td:focus {
 
 .actions-start,
 .actions-end {
-  ::slotted(calcite-action) {
+  ::slotted(calcite-action),
+  ::slotted(calcite-action-menu) {
     @apply self-stretch;
 
     color: inherit;
